Colaboratory를 통해 생성됨

--- a/SNS마케터.ipynb
+++ b/SNS마케터.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP7fB5OnyiQNSS2XjCkBA8s",
+      "authorship_tag": "ABX9TyPzx6tTDAS3jnftIQwu4cyl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**마케팅 용어 ([링크1](https://brunch.co.kr/@edte1020/85]))([링크2](https://www.haebom.dev/3d6f4b7e-0847-481c-8727-7376b944208d]))**\n",
+        "**마케팅 용어 ([링크1](https://brunch.co.kr/@edte1020/85))([링크2](https://www.haebom.dev/3d6f4b7e-0847-481c-8727-7376b944208d))**\n",
         "- ARPPU(Average Revenue Per Paying User) : 일정기간동안 모든 유저의 평균 결제 비용\n",
         "- ARPU(Average Revenue Per User) : 일정 기간동안 결제한 유저의 평균 결제 금액\n",
         "- CVR(Conversion Rate) : 전환률\n",
@@ -156,10 +156,10 @@
       "source": [
         "**인스타(광고, DAU)**\n",
         "1. 커뮤니티존속 최우선 : 커뮤니티를 생성함(비슷한 사람이 모임)\n",
-        "2. 영감을주는 콘텐츠(중요)\n",
+        "2. 영감을주는 콘텐츠(중요) -> 액션을 유도\n",
         "3. 단순화\n",
         "4. 인플루언서 마케팅: 네이티브 콘텐츠(다회성, 자연스러움, 솔직함, 스토리가 있는)\n",
-        "5. 겹치지 않는(미시) 데이터를 30개 씩 올려보고 더 액션이 좋은 것을 알아보기\n"
+        "5. 겹치지 않는(미시) 데이터를 30개 만들어보기\n"
       ],
       "metadata": {
         "id": "A3LZ17GdidhO"
@@ -210,11 +210,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "- 정성 데이터(Qualitative data) : 표현& 해석이 가능한 데이터 (감정) - 액션을 구상한다.\n",
-        "    - In-depth interview(1:1)\n",
-        "    - Focus Group interview(다:1)\n",
-        "    - Usability testing(고객에게 설정을 주고 진행)\n",
-        "    - A/B testing\n",
+        "- 정성 데이터(Qualitative data) : 표현& 해석이 가능한 데이터 (감정)\n",
+        "    - 액션을 불러와야한다.\n",
+        "    - 정량데이터로 숫자화 하는게 좋다.\n",
+        "    - 수집 방법\n",
+        "        - In-depth interview(1:1)\n",
+        "        - Focus Group interview(다:1)\n",
+        "        - Usability testing(고객에게 설정을 주고 진행)\n",
+        "        - A/B testing\n",
         "- 정량 데이터(Quantitavtive data) : 측정 & 비교 가능한 데이터(측량가능한 데이터) - 문제만 남긴다."
       ],
       "metadata": {
@@ -231,6 +234,75 @@
       ],
       "metadata": {
         "id": "xwUhPmTkgIg5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "고객 인사이트\n",
+        "마케팅 클라우드 : https://mktcloud.igaworks.com/\n",
+        "모바일 인덱스 : https://www.mobileindex.com/insight-report\n",
+        "뤼튼 / Chat GPT : https://wrtn.ai/\n",
+        "\n",
+        "매거진\n",
+        "비쥬얼 다이브 : https://www.visualdive.com/\n",
+        "하버드비즈니스리뷰 : https://www.hbrkorea.com/\n",
+        "동아비즈니스리뷰 : https://dbr.donga.com/\n",
+        "롱블랙 : https://www.longblack.co/\n",
+        "\n",
+        "SNS / 광고 현황\n",
+        "메타 광고 라이브러리 : https://www.facebook.com/ads/library/\n",
+        "구글 리치 미디어 갤러리 : https://www.richmediagallery.com/\n",
+        "FYM : https://fym.im/reference/searchKeyword/startDate/mediaName/mediaProduct\n",
+        "AAGAG : https://aagag.com/ (최근 24시간 안에 가장 핫한 것을 볼 수 있음)\n",
+        "틱톡 : https://www.tiktok.com/business/en/inspiration?industry=clothing-%26-accessories\n",
+        "\n",
+        "데이터 분석\n",
+        "네이버 데이터랩 : https://datalab.naver.com/\n",
+        "통계청 : https://kostat.go.kr/statDesc.es?mid=a10501010000\n",
+        "국가 통계 포털 : https://kosis.kr/  / https://kosis.kr/visual/nsportalStats/main.do Visual\n",
+        "썸트렌드 : https://some.co.kr/analysis/social/mention\n",
+        "앱 서비스 분석 : https://www.wiseapp.co.kr/\n",
+        "앱 서비스 분석(게임 강화) : https://sensortower.com/ko\n",
+        "\n",
+        "오프라인\n",
+        "마켓핏랩\n",
+        "MAU Vegas\n",
+        "Max Summit\n",
+        "DMS(Digital Marketing Summit)\n",
+        "대학내일 트렌드 컨퍼런스\n",
+        "\n",
+        "PDF\n",
+        "수도 없이 나옴…\n",
+        "\n",
+        "인플루언서\n",
+        "페이스북 – 심슨\n",
+        "인스타그램 – 제레팍\n",
+        "…\n"
+      ],
+      "metadata": {
+        "id": "YZhg3MvANupx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- 우리 주 고객군이 좋아하는 인플루언서의 컨텐츠를 컨텐츠에 포함시키면 좋다.\n",
+        "- 10대의 모방소비(생각) - 앱을 까는걸 좋아하지 않음, 택배비아끼고 싶어함, 바로 갖고 싶어함"
+      ],
+      "metadata": {
+        "id": "MQ87EHMmN4Gi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "[마인드맵](https://www.mindmeister.com/map/2827034689)"
+      ],
+      "metadata": {
+        "id": "Cl3BJDR1ARHG"
       }
     },
     {
