Colaboratory를 통해 생성됨

--- a/마케터_엑셀_실무.ipynb
+++ b/마케터_엑셀_실무.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMkKGordnhyWu/N+CpEMWth",
+      "authorship_tag": "ABX9TyNfcV58ncWhCKc+9CO4xkLi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -148,6 +148,20 @@
       ],
       "metadata": {
         "id": "-0BCsHkkYnkg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**함수**\n",
+        "- AND, OR(조건, 조건, 조건)\n",
+        "- IF(조건, 참값, 거짓값)\n",
+        "- RANK(타겟, 범위, 정렬)\n",
+        "- LARGE, SMALL(범위, 숫자) - 범위에서 숫자번째 값 찾기\n",
+        "- SUBTOTAL(기능번호, 범위) - 필터가 걸린 값들만 계산해줌"
+      ],
+      "metadata": {
+        "id": "RJwcb-YtH3P7"
       }
     }
   ]
