Colaboratory를 통해 생성됨

--- a/마케터_기획서&제안서ipynb.ipynb
+++ b/마케터_기획서&제안서ipynb.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZw1NnFtrVlCEM8gd1fpmK",
+      "authorship_tag": "ABX9TyN2Svd/uveBku1zIBRWx8CS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,10 +31,21 @@
       "source": [
         "**기획서**\n",
         "- 말그대로 광고제안 (크리에이티브, 공익)\n",
-        "- 기획 제안"
+        "- 기획 제안\n",
+        "- Why - How - What 순서로 설득하는 것이 더 잘먹힌다. (골든서클)\n",
+        "- 열등감을 파악하여 넛지하기\n",
+        "- Acquisition, Retention : 마케팅을 수정해야함\n",
+        "- Activation, Refferal, Revenue : 제품을 수정해야함"
       ],
       "metadata": {
         "id": "hiNu2XwJlIOQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "KUH_15XVAvY6"
       }
     },
     {
