Colaboratory를 통해 생성됨

--- a/마케터_구글아날리틱스4.ipynb
+++ b/마케터_구글아날리틱스4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwn5gFlv6X7tRz5jW7TE8q",
+      "authorship_tag": "ABX9TyMCugz8T9wDv0SvEDWqbNOv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,9 +41,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**사용자 식별 방법**\n",
+        "**다양한 기기로 접속하는 사용자를 식별하는 방법**\n",
         "1. 사이트의 로그인 정보를 사용\n",
-        "2. 구글 시그널 : 구글 서비스의 고객정보를 사용\n",
+        "2. 구글 시그널 : 구글 서비스의 고객정보를 사용하여 다양한 기기나 브라우저로 들어오는 고객을 그룹핑해주는 기능\n",
         "3. 쿠키정보를 사용"
       ],
       "metadata": {
@@ -338,11 +338,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**내부직원의 IP를 제외시키는 방법**\n",
+        "**설정 - 속성 - 데이터스트림 (내부직원의 IP를 제외시키는 방법)**\n",
         "- 데이터스트림 - 스트림을 클릭 - 태그 설정구성 - 모두표시 -  내부트래픽 정의 - 만들기   \n",
         "(ip주소에 ip주소가 다음과 같음 선택, 오른쪽에 ip주소 입력)\n",
         "- 위 과정을 거치면 traffic_type = internal로 자료 수집되어 나중에 데이터를 확인할 때 필터처리하고 확인\n",
-        "- 설정 - 속성 - 데이터 필터에서 비활성화 시키면 traffic_type을 필터처리 하지 않아도 된다.(대신, Debug_View를 사용하지 못함)\n"
+        "- 설정 - 속성 - 데이터 필터에서 비활성화 시키면 traffic_type을 필터처리 하지 않아도 된다.(대신, Debug_View를 사용하지 못함)\n",
+        "\n",
+        "**설정 - 속성 - 데이터 설정**\n",
+        "- 데이터 수집\n",
+        "    - 로그인 정보가 없을때, 다양한 기기로 들어오는 사용자를 그룹핑 해주는 작업\n",
+        "    - 이 기능이 꺼져있으면 보고서에서 인구통계데이터를 볼 수 없음\n",
+        "    - 구글시그널 : 구글 계정설정 - 개인정보 보호및 맞춤설정 - 맞춤설정된 광고 - 사용(100% 정확하지는 않음)\n",
+        "- 데이터 보관 : 반드시 14개월 설정\n",
+        "\n",
+        "**설정 - 속성 - 기여 분석 설정**\n",
+        "- 직접전환, 간접전환(노출된 광고와 전환을 유도한 광고)"
       ],
       "metadata": {
         "id": "VB3ApAhd_8aO"
